Perform code cleanup, refactor, and optimize for better maintainability and performance.

--- a/views/addUser.html
+++ b/views/addUser.html
@@ -6,6 +6,7 @@
   <title>Add New User</title>
   <link rel="stylesheet" href="../styles/index.css">
   <link rel="stylesheet" href="../styles/addUser.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.min.css">
 </head>
 <body>
 
@@ -41,6 +42,7 @@
   </form>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.all.min.js"></script>
 <script src="../scripts/addUser.js"></script>
 </body>
 </html>
