--- a/views/updateUser.html
+++ b/views/updateUser.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Update User</title>
   <link rel="stylesheet" href="../styles/addUser.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.min.css">
 </head>
 <body>
 
@@ -40,6 +41,7 @@
   </form>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.all.min.js"></script>
 <script src="../scripts/updateUser.js"></script>
 </body>
 </html>
